--- a/seller/index.html
+++ b/seller/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <img src="badge.png" alt="">
     <title>Seller Verification | Wisteria Trust</title>
     <link rel="stylesheet" href="seller.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -39,7 +40,7 @@
                         </svg>
                     </div>
                     <div class="profile-title">
-                        <h2 id="businessName">Loading Business...</h2>
+                        <h2 id="businessName">WISTERIA TRUST</h2>
                         <p id="vid">Verification ID: —</p>
                     </div>
                 </div>
@@ -100,7 +101,7 @@
                     <p class="asset-description">Official Wisteria Trust digital asset. Download and place this badge on your marketing materials or website.</p>
                     
                     <div class="badge-preview-container">
-                        <img src="badge.png" alt="Wisteria Trust Verified Seller Badge" class="badge-preview-img">
+                        <img src="/images/badge.png" alt="Wisteria Trust Verified Seller Badge" class="badge-preview-img">
                     </div>
 
                     <div class="action-block">
@@ -131,4 +132,3 @@
     <script src="seller.js"></script>
 </body>
 </html>
-
