--- a/seller/index.html
+++ b/seller/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <img src="badge.png" alt="">
     <title>Seller Verification | Wisteria Trust</title>
     <link rel="stylesheet" href="seller.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -40,7 +39,7 @@
                         </svg>
                     </div>
                     <div class="profile-title">
-                        <h2 id="businessName">WISTERIA TRUST</h2>
+                        <h2 id="businessName">Loading Business...</h2>
                         <p id="vid">Verification ID: —</p>
                     </div>
                 </div>
