--- a/seller/index.html
+++ b/seller/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <link rel="icon" type="image/png" href="badge.png">
     <title>Seller Verification | Wisteria Trust</title>
     <link rel="stylesheet" href="seller.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
