--- a/seller/index.html
+++ b/seller/index.html
@@ -74,7 +74,7 @@
                     
                     <div class="action-block">
                         <label>Institutional Verification Link</label>
-                        <p class="instruction-text">Use this direct URL for "Verify Profile" buttons or digital trust signatures.</p>
+                        <p class="instruction-text">Place this verification link in your social media bio so customers can verify your authenticity.</p>
                         <div class="code-box">
                             <code id="verifyLink">Generating...</code>
                         </div>
@@ -132,4 +132,3 @@
     <script src="seller.js"></script>
 </body>
 </html>
-
