--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="icon" href="admin.png">
     <title>All Verifications - Wisteria Trust Admin</title>
     <link rel="stylesheet" href="admin.css">
 </head>
@@ -324,3 +325,4 @@
     <script src="admin.js"></script>
 </body>
 </html>
+
