--- a/admin/login.html
+++ b/admin/login.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <link rel="icon" href="admin.png">
   <title>Admin Login – Wisteria Trust</title>
 
   <!-- Favicon -->
@@ -109,3 +110,4 @@
   <script src="admin-login.js"></script>
 </body>
 </html>
+
