--- a/admin/create.html
+++ b/admin/create.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="icon" href="admin.png">
     <title>Create Verification - Wisteria Trust Admin</title>
     <link rel="stylesheet" href="admin.css">
 </head>
@@ -141,3 +142,4 @@
     <script src="admin.js"></script>
 </body>
 </html>
+
