--- a/admin/login.html
+++ b/admin/login.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <link rel="icon" href="admin.png">
+      <link rel="icon" type="image/png" href="admin.png">
   <title>Admin Login – Wisteria Trust</title>
 
   <!-- Favicon -->
@@ -110,4 +110,5 @@
   <script src="admin-login.js"></script>
 </body>
 </html>
+
 
