--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
       <a href="#process">The Protocol</a>
       <a href="#verify">Verification Hub</a>
       <a href="#impact">Institutional Value</a>
+      <!-- Added Contact link per mentor feedback -->
+      <a href="#footer" class="contact-trigger">Contact</a>
     </div>
 
     <div class="nav-actions">
@@ -52,6 +54,8 @@
     <a href="#process" class="mobile-link">Protocol</a>
     <a href="#verify" class="mobile-link">Verification Hub</a>
     <a href="#impact" class="mobile-link">Value</a>
+    <!-- Added Contact link per mentor feedback -->
+    <a href="#footer" class="mobile-link">Contact</a>
   </div>
 </div>
 
@@ -253,7 +257,8 @@
   </section>
 </main>
 
-<footer>
+<!-- Added id="footer" for the smooth scroll anchor -->
+<footer id="footer">
   <div class="container">
     <div class="footer-grid">
       <div class="footer-brand" data-aos="fade-right">
