--- a/index.html
+++ b/index.html
@@ -69,9 +69,7 @@
       <span class="hero-label">Global Verification Standard</span>
       <h1>Institutional Integrity <br><em>Meets Absolute Trust</em></h1>
       <p>
-        Wisteria Trust is the world’s premier independent authority for seller verification. 
-        We engineer high-fidelity infrastructure to bridge the gap between global business 
-        legitimacy and consumer confidence.
+       Wisteria Trust is the world's preeminent authority in luxury seller verification. We architect high-fidelity authentication infrastructure for institutions that demand excellence ensuring every transaction upholds the standards of wealth, sophistication, and uncompromised trust.
       </p>
 
       <div class="hero-actions">
@@ -312,3 +310,4 @@
 <script src="assets/js/main.js"></script>
 </body>
 </html>
+
