--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <!-- Fonts: Playfair for luxury headings, Manrope for modern body text -->
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,500;0,700;0,900;1,500&family=Manrope:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <!-- Added Lucide icons script -->
+  <script src="https://unpkg.com/lucide@latest"></script>
 
   <!-- CSS -->
   <link rel="stylesheet" href="assets/css/style.css" />
@@ -69,7 +71,8 @@
       <span class="hero-label">Global Verification Standard</span>
       <h1>Institutional Integrity <br><em>Meets Absolute Trust</em></h1>
       <p>
-       Wisteria Trust is the world's preeminent authority in luxury seller verification. We architect high-fidelity authentication infrastructure for institutions that demand excellence ensuring every transaction upholds the standards of wealth, sophistication, and uncompromised trust.
+                Wisteria Trust is the world's preeminent authority in luxury seller verification. We architect high-fidelity authentication infrastructure for institutions that demand excellence ensuring every transaction upholds the standards of wealth, sophistication, and uncompromised trust.
+
       </p>
 
       <div class="hero-actions">
@@ -310,4 +313,3 @@
 <script src="assets/js/main.js"></script>
 </body>
 </html>
-
