--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!-- CSS -->
   <link rel="stylesheet" href="assets/css/style.css" />
 </head>
-<body class="dark-theme">
+<body class="light-theme">
 
 <nav class="navbar">
   <div class="container nav-inner">
@@ -31,7 +31,7 @@
       <a href="#process">The Protocol</a>
       <a href="#verify">Verification Hub</a>
       <a href="#impact">Institutional Value</a>
-      <!-- Added Contact link per mentor feedback -->
+      <!-- Ensured Contact link is present and correctly linked to footer -->
       <a href="#footer" class="contact-trigger">Contact</a>
     </div>
 
@@ -56,8 +56,8 @@
     <a href="#process" class="mobile-link">Protocol</a>
     <a href="#verify" class="mobile-link">Verification Hub</a>
     <a href="#impact" class="mobile-link">Value</a>
-    <!-- Added Contact link per mentor feedback -->
-    <a href="#footer" class="mobile-link">Contact</a>
+    <!-- Added Contact link to mobile menu -->
+    <a href="#footer" class="mobile-link contact-trigger">Contact</a>
   </div>
 </div>
 
